force-app/main/default/objects/HIPAA_Breach__c/HIPAA_Breach__c.object-meta.xml
<CustomObject>
    <description>Tracks HIPAA breach incidents per 45 CFR 164.400-164.414</description>
    <label>HIPAA Breach</label>
    <nameField>
        <displayFormat>BREACH-{0000}</displayFormat>
        <label>Breach Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HIPAA Breaches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>