force-app/main/default/objects/HIPAA_Breach__c/fields/Breach_Type__c.field-meta.xml
<CustomField>
    <fullName>Breach_Type__c</fullName>
    <description>Type of breach incident</description>
    <label>Breach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Unauthorized Access</fullName>
            </value>
            <value>
                <fullName>Improper Disposal</fullName>
            </value>
            <value>
                <fullName>Hacking/IT Incident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>