force-app/main/default/objects/HIPAA_Breach__c/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <description>Date the breach was discovered</description>
    <label>Discovery Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>