force-app/main/default/objects/HIPAA_Breach__c/fields/HHS_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>HHS_Confirmation_Number__c</fullName>
    <description>HHS breach notification confirmation number</description>
    <label>HHS Confirmation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>