force-app/main/default/objects/HIPAA_Breach__c/fields/HHS_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>HHS_Notification_Date__c</fullName>
    <description>Date when HHS was notified</description>
    <label>HHS Notification Date</label>
    <type>Date</type>
</CustomField>