force-app/main/default/objects/HIPAA_Breach__c/fields/HHS_Notified__c.field-meta.xml
<CustomField>
    <fullName>HHS_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether HHS has been notified</description>
    <label>HHS Notified</label>
    <type>Checkbox</type>
</CustomField>