force-app/main/default/objects/HIPAA_Breach__c/fields/Individual_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Individual_Notification_Date__c</fullName>
    <description>Date when individuals were notified</description>
    <label>Individual Notification Date</label>
    <type>Date</type>
</CustomField>