force-app/main/default/objects/HIPAA_Breach__c/fields/Individuals_Notified__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether affected individuals have been notified</description>
    <label>Individuals Notified</label>
    <type>Checkbox</type>
</CustomField>