force-app/main/default/objects/HIPAA_Breach__c/fields/Individuals_Notified_Count__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Notified_Count__c</fullName>
    <description>Number of individuals notified</description>
    <label>Individuals Notified Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>