force-app/main/default/objects/HIPAA_Breach__c/fields/Media_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Media_Notification_Date__c</fullName>
    <description>Date when media was notified</description>
    <label>Media Notification Date</label>
    <type>Date</type>
</CustomField>