force-app/main/default/objects/HIPAA_Breach__c/fields/Media_Notified__c.field-meta.xml
<CustomField>
    <fullName>Media_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether media has been notified (required for 500+ affected)</description>
    <label>Media Notified</label>
    <type>Checkbox</type>
</CustomField>