force-app/main/default/objects/HIPAA_Breach__c/fields/Notification_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Notification_Deadline__c</fullName>
    <description>60-day notification deadline per HIPAA</description>
    <label>Notification Deadline</label>
    <type>Date</type>
</CustomField>