force-app/main/default/objects/HIPAA_Breach__c/fields/Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether notification is required based on risk assessment</description>
    <label>Notification Required</label>
    <type>Checkbox</type>
</CustomField>