force-app/main/default/objects/HIPAA_Breach__c/fields/Records_Affected__c.field-meta.xml
<CustomField>
    <fullName>Records_Affected__c</fullName>
    <description>Number of individual records affected by the breach</description>
    <label>Records Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>